--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     </tr>
     <tr>
       <td>Hailey</td>
-      <td><a href="https://venmo.com/u/saigorla">$21.79</a></td>
-      <td><a href="https://venmo.com/u/saigorla">$33.55</a></td>
-      <td><a href="https://venmo.com/u/saigorla">$42.27</a></td>
-      <td><a href="https://venmo.com/u/saigorla">$36.85</a></td>
+      <td><a href="https://venmo.com/u/saigorla">$21.79</a>&#x2705;</td>
+      <td><a href="https://venmo.com/u/saigorla">$33.55</a>&#x2705;</td>
+      <td><a href="https://venmo.com/u/saigorla">$42.27</a>&#x2705;</td>
+      <td><a href="https://venmo.com/u/saigorla">$36.85</a>&#x2705;</td>
       <td>TBD</td>
       <td>TBD</td>
       <td>TBD</td>
@@ -89,8 +89,8 @@
     <tr>
       <td>Hailey</td>
       <td><a href="https://venmo.com/u/saigorla">$134.46</a></td>
+      <td><a href="https://venmo.com/u/saigorla">$$134.46</a></td>
       <td><a href="https://venmo.com/u/saigorla">$0</a></td>
-      <td><a href="https://venmo.com/u/saigorla">$134.46</a></td>
     </tr>
   </table>
 </body>
