--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <tr>
       <td>Hailey</td>
       <td><a href="https://venmo.com/u/saigorla">$134.46</a></td>
-      <td><a href="https://venmo.com/u/saigorla">$$134.46</a></td>
+      <td><a href="https://venmo.com/u/saigorla">$134.46</a></td>
       <td><a href="https://venmo.com/u/saigorla">$0</a></td>
     </tr>
   </table>
