--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Electric Bill</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <style>
     table {
       border-collapse: collapse;
