--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>Electric Bill</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <style>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    body {
+      background-image: url("/images/aura.jpg");
+    }
     table {
       border-collapse: collapse;
     }
