--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Electric Bill</title>
   <style>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     body {
-      background-image: url("/images/aura.jpg");
+      background-image: url("images/aura.jpg");
     }
     table {
       border-collapse: collapse;
