--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Electric Bill</title>
   <style>
+    body {
+      background-color: #861F41;
+    }
     table {
       border-collapse: collapse;
     }
