--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <style>
     body {
       background-color: #861F41;
+      background-image: url("https://media.licdn.com/dms/image/C4E03AQFP0XPgQMfjxg/profile-displayphoto-shrink_800_800/0/1636427567815?e=2147483647&v=beta&t=p9ktgFQnId3vVRQpEKBnowuc6revbXY6gwzhSbJcW5I");
+      background-repeat: no-repeat;
+      background-size: cover;
     }
     table {
       border-collapse: collapse;
