--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     var nov = 33.55;
     var dec = 42.27;
     var jan = 36.85;
-    var feb = 22.38;
+    var feb = "TBD";
     var mar = "TBD";
     var apr = "TBD";
     var may = "TBD";
