--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
       <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(hNet)</script></a></td>
     </tr>
   </table>
+  <img src="images/ramzy.gif"
+  style="float:right"
+  width="1000"
+  height="1000"
+  />
   <p></p>
   <img src="images/stephen.jpg"
   width="300"
