--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
     	border-top-right-radius: 10px;
     }
 
+    div {
+      width:"100vw";
+    }
+
     .div-1 {
-      width: "100%";
+      width:"100vw";
       background-color: #C64600;
       padding-top: 150px;
       padding-bottom:150px;
@@ -55,7 +59,7 @@
       padding-bottom:150px;
     }
     .div-3 {
-      width: "100%";
+      width:"100vw";
       background-color: #861F41;
       animation-name: hokies;
       animation-iteration-count: infinite;
