--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     }
 
     div {
-      width:"100vw";
+      width: 100vw;
     }
 
     .div-1 {
-      width:"100vw";
+      width: 100vw;
       background-color: #C64600;
       padding-top: 150px;
       padding-bottom:150px;
@@ -59,7 +59,7 @@
       padding-bottom:150px;
     }
     .div-3 {
-      width:"100vw";
+      width: 100vw;
       background-color: #861F41;
       animation-name: hokies;
       animation-iteration-count: infinite;
