--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
       background-color: #861F41;
       background-repeat: repeat;
       background-size: cover;
+      width: 100vw;
+      height: 100vh;
+      display: -ms-flexbox;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
     }
     table {
       border-collapse: collapse; 
@@ -15,7 +23,6 @@
     }
     th, td {
       padding: 10px;
-      font-family: Helvetica, sans-serif
     }
     td {
       vertical-align: auto;
@@ -46,26 +53,37 @@
 
     .div-1 {
       background-color: #C64600;
-      padding-top: 150px;
-      padding-bottom:150px;
-    }
-    .div-2 {
-      padding-top: 150px;
-      padding-bottom:150px;
+      padding-top: 120px;
+      padding-bottom:120px;
     }
     .div-3 {
       background-color: #861F41;
       animation-name: hokies;
       animation-iteration-count: infinite;
     }
-    .div-4 {
-      padding-top: 150px;
-      padding-bottom:150px;
-    }
     
     @keyframes hokies {
       from {background-color: #861F41;}
       to {background-color: #C64600;}
+    }
+
+    @font-face {
+      font-family: latoBlack;
+      src: url(fonts/Lato/Lato-Black.ttf);
+    }
+
+    @font-face {
+      font-family: OpenSansSemiBold;
+      src: url(fonts/OpenSans/OpenSans-SemiBold.ttf);
+    }
+
+    @font-face {
+      font-family: OpenSansRegular;
+      src: url(fonts/OpenSans/OpenSans-Regular.ttf);
+    }
+    @font-face {
+      font-family: OpenSansLight;
+      src: url(fonts/OpenSans/OpenSans-Light.ttf);
     }
 
   </style>
@@ -127,11 +145,10 @@
       document.write(variable);
     }
   </script>
-  <p></p>
   <div class="div-1">
-    <p></p>
+    <h1 style="text-align:center; font-size: 100px; color:#ffffff; font-family: OpenSansSemiBold;">The Electric Bill Ft. Memes</h1>
     <table>
-      <tr>
+      <tr style="font-family: OpenSansSemiBold;">
         <th>Mate</th>
         <th>Oct 2022</th>
         <th>Nov 2022</th>
@@ -144,67 +161,67 @@
         <th>Jun 2023</th>
       </tr>
       <tr bgcolor="#ffffff">
-        <td>Reagan</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a>&#x2705;</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(may)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(jun)</script></a></td>
+        <td style="font-family: OpenSansSemiBold;">Reagan</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a>&#x2705;</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(may)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jun)</script></a></td>
       </tr>
       <tr bgcolor="#d6d6d6">
-        <td>Zach</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(may)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(jun)</script></a></td>
+        <td style="font-family: OpenSansSemiBold;">Zach</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(may)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jun)</script></a></td>
       </tr>
       <tr bgcolor="#ffffff">
-        <td>Hailey</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a>&#x2705;</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a>&#x2705;</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a>&#x2705;</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(may)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(jun)</script></a></td>
+        <td style="font-family: OpenSansSemiBold;">Hailey</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a>&#x2705;</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a>&#x2705;</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a>&#x2705;</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(may)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jun)</script></a></td>
       </tr>
     </table>
     <p></p>
     <table>
-      <tr>
+      <tr style="font-family: OpenSansSemiBold;">
         <th>Mate</th>
         <th>Total Amount Required</th>
         <th>Total Amount Received</th>
         <th>Net Amount</th>
       </tr>
       <tr bgcolor="#ffffff">
-        <td>Reagan</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(total)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(rReceived)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(rNet)</script></a></td>
+        <td style="font-family: OpenSansSemiBold;">Reagan</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(total)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(rReceived)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(rNet)</script></a></td>
       </tr>
       <tr bgcolor="#d6d6d6">
-        <td>Zach</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(total)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(zReceived)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(zNet)</script></a></td>
+        <td style="font-family: OpenSansSemiBold;">Zach</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(total)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(zReceived)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(zNet)</script></a></td>
       </tr>
       <tr bgcolor="#ffffff">
-        <td>Hailey</td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(total)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(hReceived)</script></a></td>
-        <td><a href="https://venmo.com/u/saigorla">$<script>docWrite(hNet)</script></a></td>
+        <td style="font-family: OpenSansSemiBold;">Hailey</td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(total)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(hReceived)</script></a></td>
+        <td style="font-family: OpenSansRegular;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(hNet)</script></a></td>
       </tr>
     </table>
     <p></p>
@@ -215,13 +232,12 @@
     height="700px"
     />
   </div>
-  <div class="div-3" style="display: flex; justify-content: center;">
+  <div class="div-3" display="block" style="text-align: center;">
     <h1 style="font-size: 100px; text-align: center; color:#ffffff">
       The Pyramid
       Featuring. Ramzy Saffarini
     </h1>
     <img src="images/ramzy.gif"
-    style="float:inline-end"
     width="1000"
     height="1000"
     />
