--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Electric Bill</title>
+  <script defer src="js/slide.js"></script>
   <style>
     body {
       background-color: #861F41;
@@ -9,7 +10,7 @@
       background-size: cover;
       width: 100vw;
       height: 100vh;
-      display: -ms-flexbox;
+      display: flexbox;
       justify-content: center;
       align-items: center;
       margin: 0;
@@ -51,20 +52,29 @@
     	border-top-right-radius: 10px;
     }
 
-    .div-1 {
-      background-color: #C64600;
-      padding-top: 120px;
-      padding-bottom:120px;
-    }
-    .div-3 {
-      background-color: #861F41;
-      animation-name: hokies;
-      animation-iteration-count: infinite;
+    div {
+      display: grid;
+      place-items: center;
+      align-content: center;
     }
     
-    @keyframes hokies {
-      from {background-color: #861F41;}
-      to {background-color: #C64600;}
+    .hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+    }
+
+    .show {
+      opacity: 1;
+      filter: blur(0);
+      transform: translateY(0);
+    }
+
+    @media(prefer-reduced-motion) {
+      .hidden {
+        transition: none
+      }
     }
 
     @font-face {
@@ -145,7 +155,7 @@
       document.write(variable);
     }
   </script>
-  <div class="div-1">
+  <div class="hidden" style="background-color: #C64600; padding-top: 120px; padding-bottom:120px;">
     <h1 style="text-align:center; font-size: 100px; color:#ffffff; font-family: OpenSansSemiBold;">The Electric Bill Ft. Memes</h1>
     <table>
       <tr style="font-family: OpenSansSemiBold;">
@@ -226,13 +236,13 @@
     </table>
     <p></p>
   </div>
-  <div>
+  <div class="hidden">
     <img src="https://media.licdn.com/dms/image/C4E03AQFP0XPgQMfjxg/profile-displayphoto-shrink_800_800/0/1636427567815?e=2147483647&v=beta&t=p9ktgFQnId3vVRQpEKBnowuc6revbXY6gwzhSbJcW5I"
     width="100%"
     height="700px"
     />
   </div>
-  <div class="div-3" display="block" style="text-align: center;">
+  <div class="hidden" display="block" style="text-align: center;">
     <h1 style="font-size: 100px; text-align: center; color:#ffffff">
       The Pyramid
       Featuring. Ramzy Saffarini
@@ -242,13 +252,13 @@
     height="1000"
     />
   </div>
-  <div>
+  <div class="hidden">
     <img src="images/stephen.jpg"
     width="100%"
     height="500px"
     />
   </div>
-  <div>
+  <div class="hidden">
     <img src="images/slushy.jpg"
     width="100%"
     height="500px"
