--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
       gap: 2em;
     }
 
+    @media (max-width: 480px) {
+      .people {
+        gap: 1em;
+      }
+    }
+
     .image-people {
       width: 40%;
       height: 1000px;
@@ -172,6 +178,11 @@
         padding-left: 30px;
       }
     }
+    @media (max-width: 390px) {
+      .rampad {
+        padding-left: 8px;
+      }
+    }
 
     .savpad {
       padding-left: 30px;
@@ -180,6 +191,12 @@
     @media (max-width: 480px) {
       .savpad {
         padding-left: 20px;
+      }
+    }
+
+    @media (max-width: 390px) {
+      .savpad {
+        padding-left: 8px;
       }
     }
 
