--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
       }
     }
 
+    @media (max-width: 390px) {
+      h1 {
+        font-size: 27px;
+      }
+    }
+
     .rampad {
       padding-left: 10px;
     }
