--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
       <tr style="background-color: #d6d6d6;">
         <td style="font-family: JakartaSansExtraBold;">Zach</td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
-        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a></td>
-        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a></td>
-        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a></td>
+        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a>&#x2705;</td>
+        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a>&#x2705;</td>
+        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a>&#x2705;</td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
