--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       display: flex;
       flex-wrap: nowrap;
       justify-content: space-between;
+      width: 100vw;
       margin: 0;
       padding: 0;
       align-content: flex-start;
@@ -145,33 +146,33 @@
     @media (max-width: 480px) {
       .people {
         gap: 1em;
+        width: 100vw;
       }
     }
 
     .image-people {
-      width: 40%;
-      height: 1000px;
+      max-width: 40%;
     }
 
     @media (max-width: 480px) {
       .image-people {
-        height: 200px;
+        max-width: 40%;
       }
     }
 
     h1 {
-      font-size: 150px;
+      font-size: 8vw;
     }
 
     @media (max-width: 480px) {
       h1 {
-        font-size: 30px;
+        font-size: 7vw;
       }
     }
 
     @media (max-width: 390px) {
       h1 {
-        font-size: 27px;
+        font-size: 7vw;
       }
     }
 
@@ -186,7 +187,7 @@
     }
     @media (max-width: 390px) {
       .rampad {
-        padding-left: 8px;
+        padding-left: 20px;
       }
     }
 
@@ -196,13 +197,13 @@
 
     @media (max-width: 480px) {
       .savpad {
-        padding-left: 20px;
+        padding-left: 30px;
       }
     }
 
     @media (max-width: 390px) {
       .savpad {
-        padding-left: 8px;
+        padding-left: 20px;
       }
     }
 
@@ -351,7 +352,7 @@
         <th>Mate</th>
         <th>Total Amount Required</th>
         <th>Total Amount Received</th>
-        <th>Net Amount</th>
+        <th>Amount Owed</th>
       </tr>
       <tr bgcolor="#ffffff">
         <td style="font-family: JakartaSansExtraBold;">Reagan</td>
