--- a/index.html
+++ b/index.html
@@ -177,33 +177,33 @@
     }
 
     .rampad {
-      padding-left: 10px;
+      padding-left: 1vw;
     }
 
     @media (max-width: 480px) {
       .rampad {
-        padding-left: 30px;
+        padding-left: 1vw;
       }
     }
     @media (max-width: 390px) {
       .rampad {
-        padding-left: 20px;
+        padding-left: 1vw;
       }
     }
 
     .savpad {
-      padding-left: 30px;
+      padding-left: 1vw;
     }
 
     @media (max-width: 480px) {
       .savpad {
-        padding-left: 30px;
+        padding-left: 1vw;
       }
     }
 
     @media (max-width: 390px) {
       .savpad {
-        padding-left: 20px;
+        padding-left: 1vw;
       }
     }
 
