--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       <tr style="background-color: #ffffff;">
         <td style="font-family: JakartaSansExtraBold;">Reagan</td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(oct)</script></a>&#x2705;</td>
-        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a></td>
+        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(nov)</script></a>&#x2705;</td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(dec)</script></a>&#x2705;</td>
-        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a></td>
-        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a></td>
+        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(jan)</script></a>&#x2705;</td>
+        <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(feb)</script></a>&#x2705;</td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(mar)</script></a></td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(apr)</script></a></td>
         <td style="font-family: JakartaSansSemiBold;"><a href="https://venmo.com/u/saigorla">$<script>docWrite(may)</script></a></td>
